# graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile-shaders.bat  premake.lua
include/mrender/: defines.hpp  file_ops.hpp  imgui_impl_mrender.hpp  mrender.hpp  testing.hpp
include/mrender/core/: factory.hpp  file_ops.hpp  static_string.hpp  timeable.hpp
include/mrender/gfx/: camera.hpp  framebuffer.hpp  geometry.hpp  light.hpp  material.hpp  render_context.hpp  render_state.hpp  renderable.hpp  shader.hpp  shapes.hpp  texture.hpp
include/mrender/handler/: camera.hpp  framebuffer.hpp  geometry.hpp  render_context.hpp  shader.hpp  texture.hpp
include/mrender/renderers/: renderer.hpp
include/mrender/renderers/deferred/: deferred.hpp
include/mrender/renderers/gi/: gi.hpp
include/mrender/renderers/my-renderer/: my_renderer.hpp
include/mrender/renderers/my-renderer2/: my_renderer2.hpp
include/mrender/renderers/techniques/: testing.hpp
include/mrender/systems/: system.hpp
include/mrender/systems/deferred/: deferred.hpp
include/mrender/systems/empty/: empty.hpp
include/mrender/systems/gbuffer/: gbuffer.hpp
include/mrender/systems/my-system/: my_system.hpp
include/mrender/systems/my-system2/: my_system2.hpp
include/mrender/systems/post-processing/: post_processing.hpp
include/mrender/systems/shadow-mapping/: shadow_mapping.hpp
include/mrender/systems/testing/: testing.hpp
include/mrender/techniques/: technique.hpp
include/mrender/techniques/testing/: testing.hpp
include/mrender/utils/: static_string.hpp  timable.hpp
shaders/deferred_combine/: deferred_combine-frag.sc  deferred_combine-vert.sc
shaders/deferred_geo/: deferred_geo-frag.sc  deferred_geo-vert.sc
shaders/deferred_light/: deferred_light-frag.sc  deferred_light-vert.sc
shaders/flat/: flat-frag.sc  flat-vert.sc
shaders/screen/: screen-frag.sc  screen-vert.sc
shaders/shadow/: shadow-frag.sc
shaders/simple/: simple-frag.sc
shaders/src/: mrender-light.sh
shaders/src/deferred_combine/: deferred_combine-frag.sc
shaders/src/deferred_geo/: deferred_geo-frag.sc
shaders/uber/: uber-frag.sc
source/include/bimg/: bimg.h
source/include/graphics/: cmd.h  dbg.h  defines.h  dialog.h  embedded_shader.h  entry.h  graphics.h  input.h  platform.h
source/include/mrender/: bgfx.h  dbg.h  dialog.h  embedded_shader.h  entry.h  input.h
source/src/: amalgamated.cpp  amalgamated.mm  bgfx.cpp  bgfx_p.h  charset.h  cmd.cpp  config.h  debug_renderdoc.cpp  debug_renderdoc.h  dialog.cpp  dialog_darwin.mm  dxgi.cpp  dxgi.h  emscripten.h  entry.cpp  entry_android.cpp  entry_html5.cpp  entry_ios.mm  entry_noop.cpp  entry_osx.mm  entry_p.h  entry_windows.cpp  entry_x11.cpp  fs_clear0.bin.h  fs_clear1.bin.h  fs_clear2.bin.h  fs_clear3.bin.h  fs_clear4.bin.h  fs_clear5.bin.h  fs_clear6.bin.h  fs_clear7.bin.h  fs_debugfont.bin.h  glcontext_egl.cpp  glcontext_egl.h  glcontext_html5.cpp  glcontext_html5.h  glcontext_wgl.cpp  glcontext_wgl.h  glimports.h  graphics.cpp  (+45 more)
source/src/bimg/: bimg_p.h  config.h  image.cpp  image_gnf.cpp
source/src/debugdraw/: debugdraw.cpp  debugdraw.h
src/mrender/: imgui_impl_mrender.cpp  mrender.cpp  testing.cpp
src/mrender/core/: timeable.cpp
src/mrender/gfx/: camera.cpp  framebuffer.cpp  geometry.cpp  light.cpp  material.cpp  render_context.cpp  render_state.cpp  renderable.cpp  shader.cpp  texture.cpp
src/mrender/handler/: camera.cpp  framebuffer.cpp  geometry.cpp  render_context.cpp  render_state.cpp  shader.cpp  texture.cpp
src/mrender/renderers/: renderer.cpp
src/mrender/renderers/deferred/: deferred.cpp
src/mrender/renderers/gi/: gi.cpp
src/mrender/renderers/my-renderer/: my_renderer.cpp
src/mrender/renderers/my-renderer2/: my_renderer2.cpp
src/mrender/renderers/techniques/: testing.cpp
src/mrender/systems/: system.cpp
src/mrender/systems/deferred/: deferred.cpp
src/mrender/systems/empty/: empty.cpp
src/mrender/systems/gbuffer/: gbuffer.cpp
src/mrender/systems/my-system/: my_system.cpp
src/mrender/systems/my-system2/: my_system2.cpp
src/mrender/systems/post-processing/: post_processing.cpp
src/mrender/systems/shadow-mapping/: shadow_mapping.cpp
src/mrender/systems/testing/: testing.cpp
src/mrender/techniques/: technique.cpp
src/mrender/techniques/testing/: testing.cpp
